[package]
name = "p2p-node-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bytes = "1.4.0"
byteorder = "1.4.3"
concat-kdf = "0.1.0"
ethereum-types = "0.14.1"
hmac = "0.12.1"
sha2 = "0.10.7"
sha3 = "0.10.8"
rlp = "0.5.2"
tokio = {version = "1.31.0", features= ["net", "rt", "macros", "time", 
"io-util"]}
thiserror = "1.0.46"
hex = "0.4.3"
secp256k1 = { version = "0.27.0", features = [
  "global-context",
  "rand-std",
  "recovery",
] }
ctr = "0.9.2"